syntax = "proto3";

package im.v1;


option go_package = "api/im/v1;v1";


// 消息类型枚举
enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  CHAT                     = 1;
  SYSTEM                   = 2;
  CONTROL                  = 3;
}

// 目标类型枚举
enum TargetType {
  TARGET_TYPE_UNSPECIFIED = 0;
  USER                    = 1;
  GROUP                   = 2;
  BROADCAST               = 3;
}

// 基础消息结构
message BaseMessage {
  string              msg_id       = 1;     // 消息ID 用户级别唯一
  MessageType         message_type         = 2;     // 消息类型
  string              from_user_id       = 3;     // 发送者ID 或 "system"
  TargetType          target_type  = 4;     // 目标类型
  string     to_user_id      = 5;     // 接收者
  bytes               content      = 6;     // 消息内容（二进制）
  int64               timestamp    = 7;     // 时间戳（单位: 秒 或 毫秒）
  int64               expire_time  = 10;    // 过期时间戳
  string              msg_group_id          = 11;   // 内容级别ID，用户聚合分析
}

